--- a/web-client/package.json
+++ b/web-client/package.json
@@ -10,8 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@thatopen/components": "^2.3.12",
+    "@thatopen/components-front": "^2.3.7",
+    "@thatopen/ui": "^2.3.0",
+    "@types/stats.js": "^0.17.3",
+    "@types/three": "^0.169.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "stats.js": "^0.17.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
