--- a/platform/package.json
+++ b/platform/package.json
@@ -21,6 +21,10 @@
 	"dependencies": {
 		"@thatopen/components": "^2.3.12",
 		"@thatopen/components-front": "^2.3.7",
-		"@thatopen/ui": "^2.3.0"
+		"@thatopen/ui": "^2.3.0",
+		"@types/stats.js": "^0.17.3",
+		"@types/three": "^0.169.0",
+		"sass": "^1.80.4",
+		"stats.js": "^0.17.0"
 	}
 }
